--- a/LeProHQ++/include/meson.build
+++ b/LeProHQ++/include/meson.build
@@ -1,1 +1,16 @@
+
+
 inc = include_directories('.')
+
+# add includes
+install_headers([
+    'Common/Color.hpp'
+], subdir: 'Common')
+
+install_headers([
+    'FullyInclusive/PartonicVars.hpp'
+], subdir: 'FullyInclusive')
+
+install_headers([
+    'DynamicScaleFactors.hpp',
+])
