--- a/LeProHQ++/src/meson.build
+++ b/LeProHQ++/src/meson.build
@@ -1,3 +1,16 @@
+# configure
+conf_data = configuration_data()
+conf_data.set('VERSION_STR', meson.project_version())
+configure_file(output : 'config-buildtime.h',
+               configuration : conf_data)
+
+#if get_option('openloops')
+#    conf.set('HAVE_OPENLOOPS', '1')
+#endif
+
+configuration_inc = include_directories('.')
+
+# add sources
 sources = []
 
 sources += [
@@ -61,17 +74,10 @@ sources += [
     'Pdf/PdfWrapper.cpp'
 ]
 
-# LeProHQ = executable(
-#     'LeProHQ',
-#     ['main.cpp'] + sources,
-#     include_directories : inc,
-#     dependencies: [gsl_dep, gslcblas_dep, dvegas_dep, lhapdf_dep, boost_dep, rk_dep]
-# )
-
 LeProHQpp = shared_module(
     'LeProHQpp',
     ['Python.cpp'] + sources,
     name_prefix: '',
-    include_directories : inc,
+    include_directories : [inc, configuration_inc],
     dependencies: [gsl_dep, gslcblas_dep, dvegas_dep, lhapdf_dep, boost_dep, rk_dep, py_dep, pye_dep, yaml_dep],
 )
