--- a/LeProHQ++/src/meson.build
+++ b/LeProHQ++/src/meson.build
@@ -1,12 +1,25 @@
 # configure
 conf_data = configuration_data()
 conf_data.set('VERSION_STR', meson.project_version())
-configure_file(output : 'config-buildtime.h',
+# pass PDF support
+if get_option('morfintungb')
+    conf_data.set('HAVE_MORFINTUNGB', '1')
+endif
+if get_option('cteq3')
+    conf_data.set('HAVE_CTEQ3', '1')
+endif
+if get_option('grv')
+    conf_data.set('HAVE_GRV', '1')
+endif
+if get_option('grsv')
+    conf_data.set('HAVE_GRSV', '1')
+endif
+if get_option('dssv')
+    conf_data.set('HAVE_DSSV', '1')
+endif
+# write
+configure_file(output : 'config-buildtime.hpp',
                configuration : conf_data)
-
-#if get_option('openloops')
-#    conf.set('HAVE_OPENLOOPS', '1')
-#endif
 
 configuration_inc = include_directories('.')
 
@@ -73,7 +86,24 @@ sources += [
 sources += [
     'Pdf/PdfWrapper.cpp'
 ]
+# add PDF source files
+if get_option('morfintungb')
+    sources += ['Pdf/mortungb.f']
+endif
+if get_option('cteq3')
+    sources += ['Pdf/cteq3.f']
+endif
+if get_option('grv')
+    sources += ['Pdf/grv94.f']
+endif
+if get_option('grsv')
+    sources += ['Pdf/grsvpol.f']
+endif
+if get_option('dssv')
+    sources += ['Pdf/DSSV_gluon_update.f']
+endif
 
+# build
 LeProHQpp = shared_module(
     'LeProHQpp',
     ['Python.cpp'] + sources,
